unpackaged/main/default/objects/CM_Policy__c/CM_Policy__c.object-meta.xml
<CustomObject>
    <description>Case Management Object to hold information on insurance policies to help manage and collect information for case work.</description>
    <label>CM Policy</label>
    <nameField>
        <label>CM Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>