unpackaged/main/default/objects/CM_Policy__c/fields/Associated_Intake__c.field-meta.xml
<CustomField>
    <fullName>Associated_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Intake that the policy is associated with. This ties the policy to the case and allows it to be referenced.</description>
    <inlineHelpText>The case that is referencing information on the policy.</inlineHelpText>
    <label>Associated Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>CM Policies</relationshipLabel>
    <relationshipName>CM_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>