unpackaged/main/default/objects/CM_Policy__c/fields/fx_Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>fx_Policy_Holder_Name__c</fullName>
    <description>Used to pull in the policy holder name for easy reference and or reporting.  For any document sharing with partners etc.</description>
    <formula>Policy_Holder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name pulled from the Policy Holder party object.</inlineHelpText>
    <label>Policy Holder Name</label>
    <type>Text</type>
</CustomField>