unpackaged/main/default/objects/CM_Policy__c/fields/Insurance_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Name__c</fullName>
    <description>Used to record the name of the insurance provider that is provided by the policy holder/client.</description>
    <inlineHelpText>Name of the insurance provider provided by the client.</inlineHelpText>
    <label>Insurance Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>