unpackaged/main/default/objects/CM_Policy__c/fields/Insured_by_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insured_by_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party that receives policy insurance coverage, but is not necessarily policyholder</description>
    <inlineHelpText>Person insured by policy</inlineHelpText>
    <label>Insured by Policy</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies Insured By</relationshipLabel>
    <relationshipName>Policies_Insured_By</relationshipName>
    <type>Lookup</type>
</CustomField>