unpackaged/main/default/objects/CM_Policy__c/fields/Location_covered_in_Policy__c.field-meta.xml
<CustomField>
    <fullName>Location_covered_in_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location based policies. This shows the location that is covered under the Policy.</description>
    <inlineHelpText>The address/location that the policy may cover.</inlineHelpText>
    <label>Location covered in Policy</label>
    <referenceTo>CM_Location__c</referenceTo>
    <relationshipLabel>CM Policies</relationshipLabel>
    <relationshipName>CM_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>