unpackaged/main/default/objects/CM_Policy__c/fields/Policy_Coverage_Description__c.field-meta.xml
<CustomField>
    <fullName>Policy_Coverage_Description__c</fullName>
    <description>This coverage description can go over limits and particulars of what is covered or isn&#39;t in the review.  This is open text to gather as much CM data on policy items as possible.</description>
    <inlineHelpText>The limits of coverage.  What can or cannot be covered.</inlineHelpText>
    <label>Policy Coverage Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>