unpackaged/main/default/objects/CM_Policy__c/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the policy holder listed on the policy.  Should be filled out for easy reference if possible.  To be used and referenced if the person is in our system.</description>
    <inlineHelpText>Policy Holder for the policy</inlineHelpText>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy Holder</relationshipLabel>
    <relationshipName>Policy_Holder_of</relationshipName>
    <type>Lookup</type>
</CustomField>