unpackaged/main/default/objects/CM_Policy__c/fields/Policy_Holder_Info__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Info__c</fullName>
    <description>FLOW ONLY:  Used to determine the policy holder info or to define it further. I.e. &quot;Current Client&quot; or &quot;Client&quot; or &quot;Parent&quot; etc.  Use of text field inside of flow allows us to be versatile as needed.</description>
    <inlineHelpText>Information on Policy Holder</inlineHelpText>
    <label>Policy Holder Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>