unpackaged/main/default/objects/CM_Policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Used to hold the various types of insurance policy numbers for reference on the case.</description>
    <inlineHelpText>Insurance Policy Number related to the specific policy</inlineHelpText>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>