unpackaged/main/default/objects/CM_Policy__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <description>The type of insurance policy being represented in the information tied to the case and damages.</description>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Renters</fullName>
            </value>
            <value>
                <fullName>Home Owners</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Whole Life</fullName>
            </value>
            <value>
                <fullName>None of the Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>